on-prem/nginx/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
spec:
  entryPoints:
    - web
    - websecure  # Enable websecure if you want HTTPS support
  routes:
    - match: Host(`www.nginx.local.nthedao.info`)
      kind: Rule
      services:
        - name: nginx
          port: 80
    - match: Host(`nginx.local.nthedao.info`)
      kind: Rule
      services:
        - name: nginx
          port: 80
  tls:
    secretName: local-nthedao-info-staging-tls
